# AutoGPT-Code-Ability

./: .codiumai.toml  .env.example  .gitignore  .isort.cfg  .pr_agent.toml  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTORS.md  Dockerfile  Dockerfile.frontend  LICENSE  README.md  cloudbuild.prod.yaml  cloudbuild.yaml  create.json  docker-compose.full.yml  docker-compose.yml  poc.py  pyproject.toml  ruff.config.json  run  schema.prisma  x.json  x.y
.devcontainer/: devcontainer.json
.github/setup-env/: action.yml
.github/workflows/: benchmarks.yml  formatting.yml  lint.yml  pr-review-agent.yml  tests.yml
codex/: __main__.py  __serve__.py  agent.py  analytics.py  api.py  api_model.py  app.py  benchmark.py  chains.py  code_gen.py  compile.py  dag.py  database.py  db_model.py  gen_graph.py  lchains.py  middleware.py  model.py  ngv2.py  old.py  runner.py
codex/arch/: agent.py
codex/architect/: agent.py  codegraph.py  database.py  model.py  routes.py
codex/blocks/: ai_call.py
codex/chains/: cg_block.py  chain.py  check_node_complexity.py  code_graph.py  decompose_task.py  gen_branching_graph.py  generate_graph.py  select_node.py  write_node.py
codex/chat/: agent.py  model.py  model_test.py  routes.py
codex/coding/: agent.py
codex/common/: ai_block.py  ai_model.py  codex_client.py  codex_logging.py  constants.py  database.py  exec_external_tool.py  log_config_cloud.ini  log_config_local.ini  logging.py  logging_config.py  model.py  parse_prisma.py  test_const.py  types.py  utils.py
codex/debug/: __init__.py  queries.py
codex/delivery/: agent.py  model.py  packager.py  routes.py
codex/deploy/: actions_workflows.py  agent.py  backend_chat_script.py  database.py  infrastructure.py  model.py  packager.py  routes.py
codex/design/: agent.py  model.py
codex/develop/: agent.py  ai_extractor.py  auth_deps.py  code_validation.py  codegraph.py  compile.py  complie.py  database.py  develop.py  function.py  function_visitor.py  model.py  routes.py
codex/developer/: agent.py  check_code_complexity.py  model.py  routes.py  select_function.py  write_function.py
codex/interview/: agent.py  ai_interview.py  ai_interview_update.py  ai_module.py  choose_tool.py  database.py  gather_task_info.py  hardcoded.py  model.py  routes.py
codex/prompts/: prompting.py
codex/providers/: ai_provider.py  anthropic_provider.py  groq_provider.py  open_ai_provider.py
codex/requirements/: agent.py  agent_v2.py  ai_clarify.py  ai_feature.py  ai_requirements.py  build_requirements_refinement_object.py  choose_tool.py  complete.py  database.py  decompose_task.py  flatten_endpoints.py  gather_task_info.py  hardcoded.py  matching.py  model.py  parser.py  routes.py  simple_agent.py  spec_holder.pickle  unwrap_schemas.py
codex/settings/: database.py  model.py  routes.py
codex/tests/: api_test.py  api_tests.py  ast_test.py  code_validation_test.py  compile_test.py  endpoint_fixing_test.py  exec_external_tool_test.py  frontend_gen_test.py  gen_database_test.py  gen_test.py  model_test.py  prisma_parse_test.py  test_api.py  type_parsing_test.py
examples/: 001_web_reader.py  002_calculator.py  003_data_agg.py  004_blog.py  005_inventory.py  006_chat.py  __init__.py  a_web_reader.py  b_calculator.py  c_data_agg.py  d_blog.py  e_inventory.py  examples.md  f_chat.py
frontend/: README.md  chat.py  codex_client.py  codex_model.py
migrations/: prepop.sql
migrations/20240212154743_init/: migration.sql
scripts/: autogpt_clustering.py  bounties.json  cluster_summaries.json  clustering.py  db.sh  downloader.py  entrypoint.sh
(+193 files in other folders)
