[tool.poetry]
name = "codex"
version = "0.1.0"
description = "Computational Oracle for Data Encoding and eXploratio"
authors = ["SwiftyOS <craigswift13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.6.0"
sqlmodel = "^0.0.14"
pgvector = "^0.2.4"
psycopg2 = "^2.9.9"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
sentence-transformers = "^2.2.2"
fastapi = "^0.108.0"
google-cloud-storage = "^2.14.0"
uvicorn = "^0.25.0"
click = "^8.1.7"
langchain = "^0.1.0"
colorama = "^0.4.6"
black = "^23.12.0"
isort = "^5.13.2"
coloredlogs = "^15.0.1"
langchain-community = "^0.0.11"
langchain-openai = "^0.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.6.0"
ipython = "^8.18.1"
ruff = "^0.1.11"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
